--- a/index.html
+++ b/index.html
@@ -15,10 +15,39 @@
   </style>
 </head>
 <body>
-  Home
-  Shop
-  About
-  Contact
+  <header>
+    <nav>
+      <div class="x-icon"></div>
+      <ul>
+        <li>Home</li>
+        <li>Shop</li>
+        <li>About</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+  </header>
+
+  <div class="slideshow-container">
+    <div class="slide fade">
+      <div class="image-1"></div>
+      <h1 class="header-1"></h1>
+      <p class="description-1"></p>
+      <div class="shop-link">
+        <p class="shop-now"></p>
+        <div class="arrow-icon"></div>
+      </div>
+    
+    </div>
+
+    <div class="nav-arrows">
+      <div class="left"></div>
+      <div class="right"></div>
+    </div>
+  </div>
+  
+  
+  
+  
 
   Discover innovative ways to decorate
 
