--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
 
   <main>
   <div class="slideshow-container">
+    <!-- slide-1 -->
     <div class="slide fade">
       <div class="image-1"></div>
       <div class="slide-content">
-        <h1 class="header-1"></h1>
-        <p class="description-1"></p>
+        <h1 class="header-1">Discover innovative ways to decorate</h1>
+        <p class="description-1">We provide unmatched quality, comfort, and style for property owners across the country. 
+          Our experts combine form and function in bringing your vision to life. Create a room in your 
+          own style with our collection and make your property a reflection of you and what you love.</p>
         <div class="shop-link">
           <p class="shop-now"><a href="#">Shop now</a></p>
           <div class="arrow-icon">
@@ -49,11 +52,15 @@
         </div>        
       </div>
     </div>
+    <!-- /slide-1 -->
+    <!-- slide-2 -->
     <div class="slide fade">
       <div class="image-2"></div>
       <div class="slide-content">
-        <h1 class="header-2"></h1>
-        <p class="description-2"></p>
+        <h1 class="header-2">We are available all across the globe</h1>
+        <p class="description-2">With stores all over the world, it's easy for you to find furniture for your home or place of business. 
+          Locally, we’re in most major cities throughout the country. Find the branch nearest you using our 
+          store locator. Any questions? Don't hesitate to contact us today.</p>
         <div class="shop-link">
           <p class="shop-now"><a href="#">Shop now</a></p>
           <div class="arrow-icon">
@@ -62,11 +69,15 @@
         </div>        
       </div>
     </div>
+    <!-- /slide-2 -->
+     <!-- slide-3 -->
     <div class="slide fade">
       <div class="image-3"></div>
       <div class="slide-content">
-        <h1 class="header-3"></h1>
-        <p class="description-3"></p>
+        <h1 class="header-3">Manufactured with the best materials</h1>
+        <p class="description-3">Our modern furniture store provide a high level of quality. Our company has invested in advanced technology 
+          to ensure that every product is made as perfect and as consistent as possible. With three decades of 
+          experience in this industry, we understand what customers want for their home and office.</p>
         <div class="shop-link">
           <p class="shop-now"><a href="#">Shop now</a></p>
           <div class="arrow-icon">
@@ -75,6 +86,7 @@
         </div>        
       </div>
     </div>
+    <!-- /slide-3 -->
 
     <div class="nav-arrows">
       <div class="left">
@@ -102,40 +114,5 @@
       Coded by <a href="#">Your Name Here</a>.
     </div>
   </footer>
-  
-  
-  
-  
-
-  Discover innovative ways to decorate
-
-  We provide unmatched quality, comfort, and style for property owners across the country. 
-  Our experts combine form and function in bringing your vision to life. Create a room in your 
-  own style with our collection and make your property a reflection of you and what you love.
-
-  Shop now
-
-  We are available all across the globe
-
-  With stores all over the world, it's easy for you to find furniture for your home or place of business. 
-  Locally, we’re in most major cities throughout the country. Find the branch nearest you using our 
-  store locator. Any questions? Don't hesitate to contact us today.
-
-  Shop now
-
-  Manufactured with the best materials
-
-  Our modern furniture store provide a high level of quality. Our company has invested in advanced technology 
-  to ensure that every product is made as perfect and as consistent as possible. With three decades of 
-  experience in this industry, we understand what customers want for their home and office.
-
-  Shop now
-
-  About our furniture
-
-  Our multifunctional collection blends design and function to suit your individual taste.
-  Make each room unique, or pick a cohesive theme that best express your interests and what
-  inspires you. Find the furniture pieces you need, from traditional to contemporary styles
-  or anything in between. Product specialists are available to help you create your dream space.
 </body>
 </html>
