--- a/index.html
+++ b/index.html
@@ -3,115 +3,141 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <link rel="stylesheet" href="css/style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@500;600;700&display=swap" rel="stylesheet">
   <title>CPWD | Room homepage</title>
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  <header>
-    <div class="hamberger-menu">
-      <button><img src="images/icon-hamburger.svg" alt="hamburger icon"></button>
-    </div>
-    <div class="logo"><img src="images/logo.svg" alt="logo"></div>
-    <!-- hidden nav -->
-    <div class="hidden-nav">
-      <nav>
-        <div class="x-icon">
-          <button><img src="images/icon-close.svg" alt="close icon"></button>
+  <main class="main-wrapper">
+    <header>
+      <div class="mobile-header-wrap">
+        <div class="hamburger-menu">
+          <button><img src="images/icon-hamburger.svg" alt="hamburger icon"></button>
         </div>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Shop</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>      
-    </div>
-  </header>
+        <div class="logo"><img src="images/logo.svg" alt="logo"></div>
+        <!-- hidden nav -->
+        <div class="hidden-nav" >
+          <nav>
+            <div class="x-icon">
+              <button><img src="images/icon-close.svg" alt="close icon"></button>
+            </div>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Shop</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </nav>      
+        </div>    
+      </div>
+      <div class="nav-arrows mobile">
+        <div class="left">
+          <button><img src="images/icon-angle-left.svg" alt="left arrow"></button>
+        </div>
+        <div class="right">
+          <button><img src="images/icon-angle-right.svg" alt="right arrow"></button>
+        </div>
+      </div> 
+    </header>
+      <div class="desktop-header-wrap">
+        <div class="desktop-nav">
+          <div class="logo"><img src="images/logo.svg" alt="logo"></div>
+          <nav>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Shop</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </nav>
+        </div>      
+      </div>
+      <div class="nav-arrows desktop">
+        <div class="left">
+          <button><img src="images/icon-angle-left.svg" alt="left arrow"></button>
+        </div>
+        <div class="right">
+          <button><img src="images/icon-angle-right.svg" alt="right arrow"></button>
+        </div>
+      </div>    
+    
 
-  <main>
-  <div class="slideshow-container">
-    <!-- slide-1 -->
-    <div class="slide fade">
-      <div class="image-1"></div>
-      <div class="slide-content">
-        <h1 class="header-1">Discover innovative ways to decorate</h1>
-        <p class="description-1">We provide unmatched quality, comfort, and style for property owners across the country. 
-          Our experts combine form and function in bringing your vision to life. Create a room in your 
-          own style with our collection and make your property a reflection of you and what you love.</p>
-        <div class="shop-link">
-          <p class="shop-now"><a href="#">Shop now</a></p>
-          <div class="arrow-icon">
-            <a href="#"><img src="images/icon-arrow.svg" alt="arrow icon"></a>
-          </div>
-        </div>        
-      </div>
-    </div>
-    <!-- /slide-1 -->
-    <!-- slide-2 -->
-    <div class="slide fade">
-      <div class="image-2"></div>
-      <div class="slide-content">
-        <h1 class="header-2">We are available all across the globe</h1>
-        <p class="description-2">With stores all over the world, it's easy for you to find furniture for your home or place of business. 
-          Locally, we’re in most major cities throughout the country. Find the branch nearest you using our 
-          store locator. Any questions? Don't hesitate to contact us today.</p>
-        <div class="shop-link">
-          <p class="shop-now"><a href="#">Shop now</a></p>
-          <div class="arrow-icon">
-            <a href="#"><img src="images/icon-arrow.svg" alt="arrow icon"></a>
-          </div>
-        </div>        
-      </div>
-    </div>
-    <!-- /slide-2 -->
-     <!-- slide-3 -->
-    <div class="slide fade">
-      <div class="image-3"></div>
-      <div class="slide-content">
-        <h1 class="header-3">Manufactured with the best materials</h1>
-        <p class="description-3">Our modern furniture store provide a high level of quality. Our company has invested in advanced technology 
-          to ensure that every product is made as perfect and as consistent as possible. With three decades of 
-          experience in this industry, we understand what customers want for their home and office.</p>
-        <div class="shop-link">
-          <p class="shop-now"><a href="#">Shop now</a></p>
-          <div class="arrow-icon">
-            <a href="#"><img src="images/icon-arrow.svg" alt="arrow icon"></a>
-          </div>
-        </div>        
-      </div>
-    </div>
-    <!-- /slide-3 -->
 
-    <div class="nav-arrows">
-      <div class="left">
-        <button><img src="images/icon-angle-left.svg" alt="left arrow"></button>
+
+    <div class="slideshow-container">
+      <!-- slide-1 -->
+      <div class="slide fade">
+        <div class="image-1"></div>
+        <div class="slide-content">
+          <h1 class="header-1">Discover innovative ways to decorate</h1>
+          <p class="description-1 description">We provide unmatched quality, comfort, and style for property owners across the country. 
+            Our experts combine form and function in bringing your vision to life. Create a room in your 
+            own style with our collection and make your property a reflection of you and what you love.</p>
+          <div class="shop-link">
+            <p class="shop-now"><a href="#">Shop now</a></p>
+            <div class="arrow-icon">
+              <a href="#"><img src="images/icon-arrow.svg" alt="arrow icon"></a>
+            </div>
+          </div>        
+        </div>
       </div>
-      <div class="right">
-        <button><img src="images/icon-angle-right.svg" alt="right arrow"></button>
+      <!-- /slide-1 -->
+      <!-- slide-2 -->
+      <div class="slide fade" style="display: none;">
+        <div class="image-2"></div>
+        <div class="slide-content">
+          <h1 class="header-2">We are available all across the globe</h1>
+          <p class="description-2 description">With stores all over the world, it's easy for you to find furniture for your home or place of business. 
+            Locally, we’re in most major cities throughout the country. Find the branch nearest you using our 
+            store locator. Any questions? Don't hesitate to contact us today.</p>
+          <div class="shop-link">
+            <p class="shop-now"><a href="#">Shop now</a></p>
+            <div class="arrow-icon">
+              <a href="#"><img src="images/icon-arrow.svg" alt="arrow icon"></a>
+            </div>
+          </div>        
+        </div>
       </div>
+      <!-- /slide-2 -->
+      <!-- slide-3 -->
+      <div class="slide fade" style="display: none;">
+        <div class="image-3"></div>
+        <div class="slide-content">
+          <h1 class="header-3">Manufactured with the best materials</h1>
+          <p class="description-3 description">Our modern furniture store provide a high level of quality. Our company has invested in advanced technology 
+            to ensure that every product is made as perfect and as consistent as possible. With three decades of 
+            experience in this industry, we understand what customers want for their home and office.</p>
+          <div class="shop-link">
+            <p class="shop-now"><a href="#">Shop now</a></p>
+            <div class="arrow-icon">
+              <a href="#"><img src="images/icon-arrow.svg" alt="arrow icon"></a>
+            </div>
+          </div>        
+        </div>
+      </div>
+      <!-- /slide-3 -->
     </div>
-  </div>
-  <div class="about-dark"></div>
-  <div class="about">
-    <h2>About our furniture</h2>
-    <p>Our multifunctional collection blends design and function to suit your       individual taste.
-      Make each room unique, or pick a cohesive theme that best express your interests and what
-      inspires you. Find the furniture pieces you need, from traditional to contemporary styles
-      or anything in between. Product specialists are available to help you create your dream space.</p>
-  </div>
-  <div class="about-light"></div>
+
+    <div class="about-dark"></div>
+    <div class="about">
+      <h2>About our furniture</h2>
+      <p>Our multifunctional collection blends design and function to suit your       individual taste.
+        Make each room unique, or pick a cohesive theme that best express your interests and what
+        inspires you. Find the furniture pieces you need, from traditional to contemporary styles
+        or anything in between. Product specialists are available to help you create your dream space.</p>
+    </div>
+    <div class="about-light"></div>    
   </main>
+  <div class="black-background"></div>
+
 
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Carlos Perez</a>.
     </div>
   </footer>
 </body>
