--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   <footer class="">
     <div class="attribution fade">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Carlos Perez</a>.
+      Coded by <a href="https://github.com/Carlos-A-P/room-homepage.git" target="_blank">Carlos Perez</a>.
     </div>
   </footer>
 </body>
