Finished adding the finishing touches to my project

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <div class="logo"><img src="images/logo.svg" alt="room"></div>
       <div class="mobile-nav">
         <div class="hamburger-menu">
-          <button onclick=" mobileNav()" aria-label="hamburger dropdown toggle"><img src="images/icon-hamburger.svg" aria-expanded="false" alt=""></button>
+          <button onclick=" mobileNav()" aria-label="hamburger toggle"><img src="images/icon-hamburger.svg" aria-expanded="false" alt=""></button>
         </div>
-        <div class="hidden-nav hidden" id="hidden-nav" >
+        <div class="hidden-nav drop-down" id="hidden-nav" >
           <nav>
             <div class="x-icon">
               <button onclick=" mobileNav()" aria-expanded="true" aria-label="close hamburger dropdown"><img src="images/icon-close.svg" alt=""></button>
@@ -71,9 +71,6 @@
             own style with our collection and make your property a reflection of you and what you love.</p>
           <div class="shop-link">
             <p class="shop-now"><a href="#">Shop now</a></p>
-            <div class="arrow-icon">
-              <a href="#"><img src="images/icon-arrow.svg" alt="arrow icon"></a>
-            </div>
           </div>        
         </div>
       </div>
@@ -88,9 +85,6 @@
             store locator. Any questions? Don't hesitate to contact us today.</p>
           <div class="shop-link">
             <p class="shop-now"><a href="#">Shop now</a></p>
-            <div class="arrow-icon">
-              <a href="#"><img src="images/icon-arrow.svg" alt="arrow icon"></a>
-            </div>
           </div>        
         </div>
       </div>
@@ -105,9 +99,6 @@
             experience in this industry, we understand what customers want for their home and office.</p>
           <div class="shop-link">
             <p class="shop-now"><a href="#">Shop now</a></p>
-            <div class="arrow-icon">
-              <a href="#"><img src="images/icon-arrow.svg" alt="arrow icon"></a>
-            </div>
           </div>        
         </div>
       </div>
