--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
 
   <footer class="">
     <div class="attribution fade">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://github.com/Carlos-A-P/room-homepage.git" target="_blank">Carlos Perez</a>.
+      Challenge by <a href="https://www.frontendmentor.io/profile/Carlos-A-P" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://carlospwd.netlify.app/">Carlos Perez</a>.
     </div>
   </footer>
 </body>
